--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,4 @@
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, OPTIONS"
-    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, X-Client-API-Key" 
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, X-Client-API-Key, Authorization" 
